add a new alternative for namedtuple in metadate_entity.py

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,22 +136,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DataIngestion:\n",
-    "    def __init__(self, config: DataIngestionConfig):\n",
-    "        self.config = config\n",
+    "import sys\n",
+    "from financeComplaint.exception import CustomException"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
     "\n",
-    "    "
+    "except Exception as e:\n",
+    "    raise CustomException(e, sys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataIngestionConfig(root_dir='artifacts/data_ingestion', from_date=datetime.datetime(2023, 5, 1, 0, 0), to_date='2023-10-10', feature_store_dir='artifacts/data_ingestion/feature_store', downloaded_dir='artifacts/data_ingestion/2023-10-10-16-47-44/downloaded_files', failed_downloaded_dir='artifacts/data_ingestion/2023-10-10-16-47-44/failed_downloaded_files', metadata_file_path='artifacts/data_ingestion/meta_info.yaml', min_start_date='2023-05-01', datasource_url='https://www.consumerfinance.gov/data-research/consumer-complaints/search/api/v1/?date_received_max={to_date}&date_received_min={from_date}&field=all&format=json')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_ingestion_config"
    ]
   }
  ],
