--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -157,7 +157,208 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/10/11 14:53:24 WARN Utils: Your hostname, ds-xps resolves to a loopback address: 127.0.1.1; using 192.168.2.16 instead (on interface wlp2s0)\n",
+      "23/10/11 14:53:24 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      ":: loading settings :: url = jar:file:/home/paladin/Downloads/Consumer-Finance-Complaint-Analysis/venv/lib/python3.8/site-packages/pyspark/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /home/paladin/.ivy2/cache\n",
+      "The jars for the packages stored in: /home/paladin/.ivy2/jars\n",
+      "com.amazonaws#aws-java-sdk added as a dependency\n",
+      "org.apache.hadoop#hadoop-aws added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-7675053c-9b45-4c9f-81a0-7d51b4f5080b;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound com.amazonaws#aws-java-sdk;1.7.4 in central\n",
+      "\tfound commons-logging#commons-logging;1.1.1 in central\n",
+      "\tfound org.apache.httpcomponents#httpclient;4.2 in central\n",
+      "\tfound org.apache.httpcomponents#httpcore;4.2 in central\n",
+      "\tfound commons-codec#commons-codec;1.3 in central\n",
+      "\tfound com.fasterxml.jackson.core#jackson-core;2.1.1 in central\n",
+      "\tfound com.fasterxml.jackson.core#jackson-databind;2.1.1 in central\n",
+      "\tfound com.fasterxml.jackson.core#jackson-annotations;2.1.1 in central\n",
+      "\tfound joda-time#joda-time;2.12.5 in central\n",
+      "\t[2.12.5] joda-time#joda-time;[2.2,)\n",
+      "\tfound org.apache.hadoop#hadoop-aws;2.7.3 in central\n",
+      "\tfound org.apache.hadoop#hadoop-common;2.7.3 in central\n",
+      "\tfound org.apache.hadoop#hadoop-annotations;2.7.3 in central\n",
+      "\tfound com.google.guava#guava;11.0.2 in central\n",
+      "\tfound com.google.code.findbugs#jsr305;3.0.0 in central\n",
+      "\tfound commons-cli#commons-cli;1.2 in central\n",
+      "\tfound org.apache.commons#commons-math3;3.1.1 in central\n",
+      "\tfound xmlenc#xmlenc;0.52 in central\n",
+      "\tfound commons-httpclient#commons-httpclient;3.1 in central\n",
+      "\tfound commons-logging#commons-logging;1.1.3 in central\n",
+      "\tfound commons-codec#commons-codec;1.4 in central\n",
+      "\tfound commons-io#commons-io;2.4 in central\n",
+      "\tfound commons-net#commons-net;3.1 in central\n",
+      "\tfound commons-collections#commons-collections;3.2.2 in central\n",
+      "\tfound javax.servlet#servlet-api;2.5 in central\n",
+      "\tfound org.mortbay.jetty#jetty;6.1.26 in central\n",
+      "\tfound org.mortbay.jetty#jetty-util;6.1.26 in central\n",
+      "\tfound com.sun.jersey#jersey-core;1.9 in central\n",
+      "\tfound com.sun.jersey#jersey-json;1.9 in central\n",
+      "\tfound org.codehaus.jettison#jettison;1.1 in central\n",
+      "\tfound com.sun.xml.bind#jaxb-impl;2.2.3-1 in central\n",
+      "\tfound javax.xml.bind#jaxb-api;2.2.2 in central\n",
+      "\tfound javax.xml.stream#stax-api;1.0-2 in central\n",
+      "\tfound javax.activation#activation;1.1 in central\n",
+      "\tfound org.codehaus.jackson#jackson-core-asl;1.9.13 in central\n",
+      "\tfound org.codehaus.jackson#jackson-mapper-asl;1.9.13 in central\n",
+      "\tfound org.codehaus.jackson#jackson-jaxrs;1.9.13 in central\n",
+      "\tfound org.codehaus.jackson#jackson-xc;1.9.13 in central\n",
+      "\tfound com.sun.jersey#jersey-server;1.9 in central\n",
+      "\tfound asm#asm;3.2 in central\n",
+      "\tfound log4j#log4j;1.2.17 in central\n",
+      "\tfound net.java.dev.jets3t#jets3t;0.9.0 in central\n",
+      "\tfound org.apache.httpcomponents#httpclient;4.2.5 in central\n",
+      "\tfound org.apache.httpcomponents#httpcore;4.2.5 in central\n",
+      "\tfound com.jamesmurty.utils#java-xmlbuilder;0.4 in central\n",
+      "\tfound commons-lang#commons-lang;2.6 in central\n",
+      "\tfound commons-configuration#commons-configuration;1.6 in central\n",
+      "\tfound commons-digester#commons-digester;1.8 in central\n",
+      "\tfound commons-beanutils#commons-beanutils;1.7.0 in central\n",
+      "\tfound commons-beanutils#commons-beanutils-core;1.8.0 in central\n",
+      "\tfound org.slf4j#slf4j-api;1.7.10 in central\n",
+      "\tfound org.apache.avro#avro;1.7.4 in central\n",
+      "\tfound com.thoughtworks.paranamer#paranamer;2.3 in central\n",
+      "\tfound org.xerial.snappy#snappy-java;1.0.4.1 in central\n",
+      "\tfound org.apache.commons#commons-compress;1.4.1 in central\n",
+      "\tfound org.tukaani#xz;1.0 in central\n",
+      "\tfound com.google.protobuf#protobuf-java;2.5.0 in central\n",
+      "\tfound com.google.code.gson#gson;2.2.4 in central\n",
+      "\tfound org.apache.hadoop#hadoop-auth;2.7.3 in central\n",
+      "\tfound org.apache.directory.server#apacheds-kerberos-codec;2.0.0-M15 in central\n",
+      "\tfound org.apache.directory.server#apacheds-i18n;2.0.0-M15 in central\n",
+      "\tfound org.apache.directory.api#api-asn1-api;1.0.0-M20 in central\n",
+      "\tfound org.apache.directory.api#api-util;1.0.0-M20 in central\n",
+      "\tfound org.apache.zookeeper#zookeeper;3.4.6 in central\n",
+      "\tfound org.slf4j#slf4j-log4j12;1.7.10 in central\n",
+      "\tfound io.netty#netty;3.6.2.Final in central\n",
+      "\tfound org.apache.curator#curator-framework;2.7.1 in central\n",
+      "\tfound org.apache.curator#curator-client;2.7.1 in central\n",
+      "\tfound com.jcraft#jsch;0.1.42 in central\n",
+      "\tfound org.apache.curator#curator-recipes;2.7.1 in central\n",
+      "\tfound org.apache.htrace#htrace-core;3.1.0-incubating in central\n",
+      "\tfound javax.servlet.jsp#jsp-api;2.1 in central\n",
+      "\tfound jline#jline;0.9.94 in central\n",
+      "\tfound com.fasterxml.jackson.core#jackson-databind;2.2.3 in central\n",
+      "\tfound com.fasterxml.jackson.core#jackson-annotations;2.2.3 in central\n",
+      "\tfound com.fasterxml.jackson.core#jackson-core;2.2.3 in central\n",
+      ":: resolution report :: resolve 3211ms :: artifacts dl 51ms\n",
+      "\t:: modules in use:\n",
+      "\tasm#asm;3.2 from central in [default]\n",
+      "\tcom.amazonaws#aws-java-sdk;1.7.4 from central in [default]\n",
+      "\tcom.fasterxml.jackson.core#jackson-annotations;2.2.3 from central in [default]\n",
+      "\tcom.fasterxml.jackson.core#jackson-core;2.2.3 from central in [default]\n",
+      "\tcom.fasterxml.jackson.core#jackson-databind;2.2.3 from central in [default]\n",
+      "\tcom.google.code.findbugs#jsr305;3.0.0 from central in [default]\n",
+      "\tcom.google.code.gson#gson;2.2.4 from central in [default]\n",
+      "\tcom.google.guava#guava;11.0.2 from central in [default]\n",
+      "\tcom.google.protobuf#protobuf-java;2.5.0 from central in [default]\n",
+      "\tcom.jamesmurty.utils#java-xmlbuilder;0.4 from central in [default]\n",
+      "\tcom.jcraft#jsch;0.1.42 from central in [default]\n",
+      "\tcom.sun.jersey#jersey-core;1.9 from central in [default]\n",
+      "\tcom.sun.jersey#jersey-json;1.9 from central in [default]\n",
+      "\tcom.sun.jersey#jersey-server;1.9 from central in [default]\n",
+      "\tcom.sun.xml.bind#jaxb-impl;2.2.3-1 from central in [default]\n",
+      "\tcom.thoughtworks.paranamer#paranamer;2.3 from central in [default]\n",
+      "\tcommons-beanutils#commons-beanutils;1.7.0 from central in [default]\n",
+      "\tcommons-beanutils#commons-beanutils-core;1.8.0 from central in [default]\n",
+      "\tcommons-cli#commons-cli;1.2 from central in [default]\n",
+      "\tcommons-codec#commons-codec;1.4 from central in [default]\n",
+      "\tcommons-collections#commons-collections;3.2.2 from central in [default]\n",
+      "\tcommons-configuration#commons-configuration;1.6 from central in [default]\n",
+      "\tcommons-digester#commons-digester;1.8 from central in [default]\n",
+      "\tcommons-httpclient#commons-httpclient;3.1 from central in [default]\n",
+      "\tcommons-io#commons-io;2.4 from central in [default]\n",
+      "\tcommons-lang#commons-lang;2.6 from central in [default]\n",
+      "\tcommons-logging#commons-logging;1.1.3 from central in [default]\n",
+      "\tcommons-net#commons-net;3.1 from central in [default]\n",
+      "\tio.netty#netty;3.6.2.Final from central in [default]\n",
+      "\tjavax.activation#activation;1.1 from central in [default]\n",
+      "\tjavax.servlet#servlet-api;2.5 from central in [default]\n",
+      "\tjavax.servlet.jsp#jsp-api;2.1 from central in [default]\n",
+      "\tjavax.xml.bind#jaxb-api;2.2.2 from central in [default]\n",
+      "\tjavax.xml.stream#stax-api;1.0-2 from central in [default]\n",
+      "\tjline#jline;0.9.94 from central in [default]\n",
+      "\tjoda-time#joda-time;2.12.5 from central in [default]\n",
+      "\tlog4j#log4j;1.2.17 from central in [default]\n",
+      "\tnet.java.dev.jets3t#jets3t;0.9.0 from central in [default]\n",
+      "\torg.apache.avro#avro;1.7.4 from central in [default]\n",
+      "\torg.apache.commons#commons-compress;1.4.1 from central in [default]\n",
+      "\torg.apache.commons#commons-math3;3.1.1 from central in [default]\n",
+      "\torg.apache.curator#curator-client;2.7.1 from central in [default]\n",
+      "\torg.apache.curator#curator-framework;2.7.1 from central in [default]\n",
+      "\torg.apache.curator#curator-recipes;2.7.1 from central in [default]\n",
+      "\torg.apache.directory.api#api-asn1-api;1.0.0-M20 from central in [default]\n",
+      "\torg.apache.directory.api#api-util;1.0.0-M20 from central in [default]\n",
+      "\torg.apache.directory.server#apacheds-i18n;2.0.0-M15 from central in [default]\n",
+      "\torg.apache.directory.server#apacheds-kerberos-codec;2.0.0-M15 from central in [default]\n",
+      "\torg.apache.hadoop#hadoop-annotations;2.7.3 from central in [default]\n",
+      "\torg.apache.hadoop#hadoop-auth;2.7.3 from central in [default]\n",
+      "\torg.apache.hadoop#hadoop-aws;2.7.3 from central in [default]\n",
+      "\torg.apache.hadoop#hadoop-common;2.7.3 from central in [default]\n",
+      "\torg.apache.htrace#htrace-core;3.1.0-incubating from central in [default]\n",
+      "\torg.apache.httpcomponents#httpclient;4.2.5 from central in [default]\n",
+      "\torg.apache.httpcomponents#httpcore;4.2.5 from central in [default]\n",
+      "\torg.apache.zookeeper#zookeeper;3.4.6 from central in [default]\n",
+      "\torg.codehaus.jackson#jackson-core-asl;1.9.13 from central in [default]\n",
+      "\torg.codehaus.jackson#jackson-jaxrs;1.9.13 from central in [default]\n",
+      "\torg.codehaus.jackson#jackson-mapper-asl;1.9.13 from central in [default]\n",
+      "\torg.codehaus.jackson#jackson-xc;1.9.13 from central in [default]\n",
+      "\torg.codehaus.jettison#jettison;1.1 from central in [default]\n",
+      "\torg.mortbay.jetty#jetty;6.1.26 from central in [default]\n",
+      "\torg.mortbay.jetty#jetty-util;6.1.26 from central in [default]\n",
+      "\torg.slf4j#slf4j-api;1.7.10 from central in [default]\n",
+      "\torg.slf4j#slf4j-log4j12;1.7.10 from central in [default]\n",
+      "\torg.tukaani#xz;1.0 from central in [default]\n",
+      "\torg.xerial.snappy#snappy-java;1.0.4.1 from central in [default]\n",
+      "\txmlenc#xmlenc;0.52 from central in [default]\n",
+      "\t:: evicted modules:\n",
+      "\tcommons-logging#commons-logging;1.1.1 by [commons-logging#commons-logging;1.1.3] in [default]\n",
+      "\torg.apache.httpcomponents#httpclient;4.2 by [org.apache.httpcomponents#httpclient;4.2.5] in [default]\n",
+      "\torg.apache.httpcomponents#httpcore;4.2 by [org.apache.httpcomponents#httpcore;4.2.5] in [default]\n",
+      "\tcommons-codec#commons-codec;1.6 by [commons-codec#commons-codec;1.3] in [default]\n",
+      "\tcommons-codec#commons-codec;1.3 by [commons-codec#commons-codec;1.4] in [default]\n",
+      "\tcom.fasterxml.jackson.core#jackson-core;2.1.1 by [com.fasterxml.jackson.core#jackson-core;2.2.3] in [default]\n",
+      "\tcom.fasterxml.jackson.core#jackson-databind;2.1.1 by [com.fasterxml.jackson.core#jackson-databind;2.2.3] in [default]\n",
+      "\tcom.fasterxml.jackson.core#jackson-annotations;2.1.1 by [com.fasterxml.jackson.core#jackson-annotations;2.2.3] in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   76  |   1   |   0   |   8   ||   68  |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-7675053c-9b45-4c9f-81a0-7d51b4f5080b\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 68 already retrieved (0kB/25ms)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/10/11 14:53:28 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -172,7 +373,9 @@
     "import json\n",
     "import re\n",
     "import time\n",
-    "from financeComplaint.entity.artifact_entity import DataIngestionArtifact"
+    "from financeComplaint.entity.artifact_entity import DataIngestionArtifact\n",
+    "from financeComplaint.entity.metadata_entity import DataIngestionMetadata\n",
+    "from financeComplaint.pipeline.spark_manager import spark_session"
    ]
   },
   {
@@ -313,12 +516,75 @@
     "        except Exception as e:\n",
     "            raise CustomException(e, sys)\n",
     "        \n",
+    "    def convert_files_to_parquet(self, ) -> str:        \n",
+    "        \"\"\"\n",
+    "        downloaded files will be converted and merged into single parquet file\n",
+    "        json_data_dir: downloaded json file directory\n",
+    "        data_dir: converted and combined file will be generated in data_dir\n",
+    "        output_file_name: output file name \n",
+    "        =======================================================================================\n",
+    "        returns output_file_path\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            \n",
+    "            json_data_dir = self.config.downloaded_dir\n",
+    "            data_dir = self.config.feature_store_dir\n",
+    "            output_file_name = self.config.file_name\n",
+    "            os.makedirs(data_dir, exist_ok=True)\n",
+    "            file_path = os.path.join(data_dir, f\"{output_file_name}\")\n",
+    "            logging.info(f\"Parquet file will be created at: {file_path}\")\n",
+    "            if not os.path.exists(json_data_dir):\n",
+    "                return file_path\n",
+    "            for file_name in os.listdir(json_data_dir):\n",
+    "                json_file_path = os.path.join(json_data_dir, file_name)\n",
+    "                logging.debug(f\"Converting {json_file_path} into parquet format at {file_path}\")\n",
+    "                df = spark_session.read.json(json_file_path)\n",
+    "                if df.count() > 0:\n",
+    "                    df.write.mode('append').parquet(file_path)\n",
+    "            return file_path\n",
+    "        except Exception as e:\n",
+    "            raise CustomException(e, sys)\n",
+    "        \n",
+    "    def write_metadata(self, file_path: str) -> None:\n",
+    "        \"\"\"\n",
+    "        This function help us to update metadata information \n",
+    "        so that we can avoid redundant download and merging.\n",
+    "\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            logging.info(f\"Writing metadata info into metadata file.\")\n",
+    "            metadata_info = DataIngestionMetadata(metadata_file_path=self.config.metadata_file_path)\n",
+    "\n",
+    "            metadata_info.write_metadata_info(from_date=self.config.from_date,\n",
+    "                                              to_date=self.config.to_date,\n",
+    "                                              data_file_path=file_path\n",
+    "                                              )\n",
+    "            logging.info(f\"Metadata has been written.\")\n",
+    "        except Exception as e:\n",
+    "            raise CustomException(e, sys)\n",
+    "        \n",
     "\n",
     "    def initiate_data_ingestion(self) -> DataIngestionConfig:\n",
     "        try:\n",
     "            logging.info(f\"Started downloading json file!\")\n",
     "            if self.config.from_date != self.config.to_date:\n",
     "                self.download_files()\n",
+    "\n",
+    "            if os.path.exists(self.config.downloaded_dir):\n",
+    "                logging.info(f\"Converting and combining downloaded json into parquet file!\")\n",
+    "                file_path = self.convert_files_to_parquet()\n",
+    "                self.write_metadata(file_path=file_path)\n",
+    "\n",
+    "            feature_store_file_path = os.path.join(self.config.feature_store_dir,\n",
+    "                                                   self.config.file_name)\n",
+    "            artifact = DataIngestionArtifact(\n",
+    "                feature_store_file_path=feature_store_file_path,\n",
+    "                downloaded_dir=self.config.downloaded_dir,\n",
+    "                metadata_file_path=self.config.metadata_file_path,\n",
+    "            )\n",
+    "\n",
+    "            logging.info(f\"Data ingestion artifact: {artifact}\")\n",
+    "            return artifact\n",
     "        \n",
     "        except Exception as e:\n",
     "            raise CustomException(e, sys)"
@@ -328,7 +594,15 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
