--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "from datetime import datetime\n",
     "from financeComplaint.constants import *\n",
-    "from financeComplaint.utils import read_yaml_file, write_yaml_file, create_directories\n",
+    "from financeComplaint.utils import read_yaml_file, create_directories\n",
     "from financeComplaint.entity.metadata_entity import DataIngestionMetadata"
    ]
   },
