Changing the location of spark_manager.py from pipeline to config

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -375,7 +375,7 @@
     "import time\n",
     "from financeComplaint.entity.artifact_entity import DataIngestionArtifact\n",
     "from financeComplaint.entity.metadata_entity import DataIngestionMetadata\n",
-    "from financeComplaint.pipeline.spark_manager import spark_session"
+    "from financeComplaint.config.spark_manager import spark_session"
    ]
   },
   {
